# rulebook_constrainer

./: README.md  package.xml  setup.cfg  setup.py
config/: example_rulebook.yaml  rulebook_params.yaml
launch/: rulebook_constrainer.launch.py
resource/: rulebook_constrainer
rulebook_constrainer/: __init__.py  llm_resolver.py  rulebook_constrainer_node.py
rulebook_constrainer/utils/: __init__.py  geometry_utils.py  mask_generator.py
